--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
   "dependencies": {
     "@loopback/authentication": "^8.1.2",
     "@loopback/authentication-jwt": "^0.11.2",
+    "@loopback/authorization": "^0.12.0",
     "@loopback/boot": "^4.1.2",
     "@loopback/core": "^3.1.2",
     "@loopback/repository": "^4.1.2",
