--- a/package.json
+++ b/package.json
@@ -59,7 +59,9 @@
     "@loopback/rest-explorer": "^5.0.0",
     "@loopback/service-proxy": "^5.0.0",
     "dotenv": "^16.0.0",
+    "loopback-connector-mysql": "^5.3.0",
     "loopback-connector-mysql2": "^6.0.0",
+    "loopback-connector-postgresql": "^5.5.0",
     "tslib": "^2.0.0"
   },
   "devDependencies": {
