--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "loopback-connector-mysql": "^5.3.0",
     "loopback-connector-mysql2": "^6.0.0",
     "loopback-connector-postgresql": "^5.5.0",
+    "node-cron": "^3.0.0",
     "tslib": "^2.0.0"
   },
   "devDependencies": {
@@ -69,6 +70,7 @@
     "@loopback/eslint-config": "^13.0.0",
     "@loopback/testlab": "^5.0.0",
     "@types/node": "^12.20.50",
+    "@types/node-cron": "^3.0.1",
     "eslint": "^8.14.0",
     "source-map-support": "^0.5.21",
     "typescript": "~4.6.4"
