--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@loopback/rest": "^12.0.0",
     "@loopback/rest-explorer": "^5.0.0",
     "@loopback/service-proxy": "^5.0.0",
+    "blockly": "^8.0.2",
     "dotenv": "^16.0.0",
     "loopback-connector-mysql": "^5.3.0",
     "loopback-connector-mysql2": "^6.0.0",
