ci: add heroku deployment configs

--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
     "prestart": "yarn run rebuild",
     "start": "node -r source-map-support/register .",
     "clean": "lb-clean dist *.tsbuildinfo .eslintcache",
-    "rebuild": "yarn run clean && yarn run build"
+    "rebuild": "yarn run clean && yarn run build",
+    "postinstall": "npm run build",
+    "start:prod": "node dist/index.js"
   },
   "repository": {
     "type": "git",
