--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "@loopback/service-proxy": "^5.0.0",
     "blockly": "^8.0.2",
     "dotenv": "^16.0.0",
+    "loopback-connector-mongodb": "^5.2.3",
     "loopback-connector-mysql": "^5.3.0",
     "loopback-connector-mysql2": "^6.0.0",
     "loopback-connector-postgresql": "^5.5.0",
