--- a/package.json
+++ b/package.json
@@ -35,8 +35,8 @@
     "start": "node -r source-map-support/register .",
     "clean": "lb-clean dist *.tsbuildinfo .eslintcache",
     "rebuild": "yarn run clean && yarn run build",
-    "postinstall": "npm run build",
-    "start:prod": "node dist/index.js"
+    "start:prod": "node dist/index.js",
+    "postinstall": "npm run build"
   },
   "repository": {
     "type": "git",
@@ -62,10 +62,7 @@
     "@loopback/service-proxy": "^5.0.0",
     "blockly": "^8.0.2",
     "dotenv": "^16.0.0",
-    "loopback-connector-mongodb": "^5.2.3",
-    "loopback-connector-mysql": "^5.3.0",
-    "loopback-connector-mysql2": "^6.0.0",
-    "loopback-connector-postgresql": "^5.5.0",
+    "loopback-connector-mongodb": "^6.2.0",
     "node-cron": "^3.0.0",
     "tslib": "^2.0.0"
   },
