--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
   },
   "devDependencies": {
     "@loopback/build": "^9.0.0",
+    "@loopback/cli": "^6.0.0",
     "@loopback/eslint-config": "^13.0.0",
     "@loopback/testlab": "^5.0.0",
     "@types/node": "^12.20.50",
